--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,8 @@
 * {
   -webkit-transition: color 200ms ease-in-out;
   transition: color 200ms ease-in-out;
+  font-family: "Mukta", sans-serif;
+  font-weight: 500;
 }
 
 body {
@@ -9,11 +11,49 @@ body {
 }
 
 h1 {
-  font-size: 6rem;
+  font-size: 7rem;
+  font-family: "Montserrat", sans-serif;
+}
+
+h1 a {
+  font-size: 7rem;
+}
+
+@media (max-width: 39.9375em) {
+  h1 {
+    font-size: 5rem;
+  }
+  h1 a {
+    font-size: 5rem;
+  }
+}
+
+h2 {
+  font-family: "Montserrat", sans-serif;
+}
+
+h4 {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+h4 a {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+@media (max-width: 39.9375em) {
+  h4 {
+    font-size: 1.2rem;
+  }
+  h4 a {
+    font-size: 1.3rem;
+  }
 }
 
 a {
   color: #cccccc;
+  font-size: 1.3rem;
   text-decoration: none;
 }
 
@@ -29,8 +69,14 @@ a:hover {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: 1rem;
+  padding-top: 1rem;
   font-weight: bolder;
+}
+
+@media (max-width: 39.9375em) {
+  .nav .desktop_menu {
+    visibility: hidden;
+  }
 }
 
 .nav #logo_link {
@@ -51,8 +97,15 @@ a:hover {
 
 .nav ul li {
   margin-left: 1rem;
-  padding-right: 1rem;
+  margin-right: 1rem;
   list-style: none;
+}
+
+@media (max-width: 63.9375em) {
+  .nav ul li {
+    margin-left: .4rem;
+    margin-right: .4rem;
+  }
 }
 
 .nav ul li a {
@@ -71,11 +124,49 @@ a:hover {
   color: #eF5C36;
 }
 
+.hero {
+  height: 105vh;
+}
+
+.hero h1 {
+  margin-top: 3rem;
+}
+
+.hero h1 a {
+  font-family: "Montserrat", sans-serif;
+}
+
 .hero a {
   color: #CF5C36;
+  font-family: "Mukta", sans-serif;
 }
 
 .hero a:hover {
   color: #eF5C36;
+}
+
+.hero h4 {
+  margin-top: 1rem;
+}
+
+.services {
+  background-color: #1a1a1a;
+  padding-top: 2rem;
+}
+
+.services h2 {
+  color: #f2f2f2;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+.services h4 {
+  color: #f2f2f2;
+  text-align: center;
+}
+
+.services p {
+  color: #cccccc;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
