added media quries to services secton in home page

--- a/style/_global.scss
+++ b/style/_global.scss
@@ -4,6 +4,9 @@
     font-weight: 500;
     
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color: $eerieBlack;
     color: $silverChalice;
