--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,10 @@
   font-weight: 500;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #171717;
   color: #cccccc;
@@ -130,10 +134,17 @@ a:hover {
 
 .hero h1 {
   margin-top: 3rem;
+  line-height: .9;
 }
 
 .hero h1 a {
   font-family: "Montserrat", sans-serif;
+}
+
+@media (max-width: null) {
+  .hero h1 {
+    text-align: center;
+  }
 }
 
 .hero a {
@@ -146,7 +157,15 @@ a:hover {
 }
 
 .hero h4 {
-  margin-top: 1rem;
+  margin-top: 3rem;
+}
+
+.hero_about h2 {
+  color: #CF5C36;
+}
+
+.hero_about h2:hover {
+  color: #eF5C36;
 }
 
 .services {
