--- a/style/_services.scss
+++ b/style/_services.scss
@@ -1,6 +1,8 @@
 .services{
     background-color: $eerieBlack2;
     padding-top: 2rem;
+    padding-bottom: 2rem;
+    height: 60vh;
     
     
    h2{
