--- a/style/_variable.scss
+++ b/style/_variable.scss
@@ -4,7 +4,7 @@ $eerieBlack2: hsla(0, 0%, 10%, 1);
 //$russet: hsla(25, 48%, 35%, .7);
 //$russet2: hsla(25, 48%, 35%, 1);
 $russet: #CF5C36;
-$russet2: #eF5C36;
+$russet2: #FF5C36;
 $silverChalice: hsla(0, 0%, 80%, 1);
 $silverChalice2: hsla(0, 0%, 95%, 1);
 
