--- a/style/style.scss
+++ b/style/style.scss
@@ -3,4 +3,7 @@
 @import "global";
 @import "nav";
 @import "hero";
-@import "services"
+@import "services";
+@import "testimonial";
+@import "aboutme";
+@import "footer";
