--- a/style/_variable.scss
+++ b/style/_variable.scss
@@ -1,10 +1,11 @@
 //!Colors
 $eerieBlack: hsla(0, 0%, 9%, 1);
 $eerieBlack2: hsla(0, 0%, 10%, 1);
+$eerieBlack3: hsla(0, 0%, 12%, 1);
 //$russet: hsla(25, 48%, 35%, .7);
 //$russet2: hsla(25, 48%, 35%, 1);
 $russet: #CF5C36;
-$russet2: #FF5C36;
+$russet2: #ff5029;
 $silverChalice: hsla(0, 0%, 80%, 1);
 $silverChalice2: hsla(0, 0%, 95%, 1);
 
