--- a/style/_aboutme.scss
+++ b/style/_aboutme.scss
@@ -1,5 +1,10 @@
 
-.hero_about{
+.about-me{
+    position: absolute;
+    top: 30%;
+    //left: 50%;
+    margin:0 auto;
+
     h2{
         color: $russet;
         &:hover{
