--- a/style/style.css
+++ b/style/style.css
@@ -12,23 +12,26 @@ html {
 body {
   background-color: #171717;
   color: #cccccc;
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 4rem;
+  color: #CF5C36;
   font-family: "Montserrat", sans-serif;
 }
 
 h1 a {
-  font-size: 7rem;
+  font-size: 4rem;
 }
 
 @media (max-width: 39.9375em) {
   h1 {
-    font-size: 5rem;
+    font-size: 2rem;
   }
   h1 a {
-    font-size: 5rem;
+    font-size: 2rem;
   }
 }
 
@@ -55,6 +58,10 @@ h4 a {
   }
 }
 
+p {
+  font-size: 1.2rem;
+}
+
 a {
   color: #cccccc;
   font-size: 1.3rem;
@@ -64,6 +71,10 @@ a {
 a:hover {
   color: #f2f2f2;
   text-decoration: none;
+}
+
+.disabled-link {
+  pointer-events: none;
 }
 
 .nav {
@@ -154,15 +165,11 @@ a:hover {
   margin: 0 auto;
 }
 
-.hero h1, .hero span {
-  font-size: 4rem;
-}
-
 .hero h1 {
   color: #1f1f1f;
   padding-bottom: 2rem;
   line-height: .9;
-  line-height: 5rem;
+  line-height: 6rem;
   -webkit-animation: change 1.4s 4s ease-in both;
           animation: change 1.4s 4s ease-in both;
 }
@@ -254,16 +261,8 @@ a:hover {
 
 .about-me {
   position: absolute;
-  top: 30%;
+  top: 20%;
   margin: 0 auto;
-}
-
-.about-me h2 {
-  color: #CF5C36;
-}
-
-.about-me h2:hover {
-  color: #ff5029;
 }
 
 footer {
