--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,64 +1,4 @@
-.nav {
-    display: flex;
-    
-    justify-content: space-between;
-    padding-top: 1rem;
-    font-weight: bolder;
-    .desktop_menu{
-        @include breakpoint-down('small'){
-           visibility: hidden; 
-        }
-    }
-    #logo_link{
-        color: $silverChalice;
-        &:hover{
-            color: $silverChalice2;
-        }
-        p{
-          font-size: 2rem;
-          font-weight: bolder;
-        }
-        span{
-          color: $russet;
-          font-size: 2rem;
-          margin-top: .4rem;
-          margin-left: .1rem;
-          &:hover{
-            color: $russet2 ;
-          }
-        }
-
-    }
-    #logo_p{
-      
-    }
-  
-    ul {
-        
-      display: flex;
-      justify-content: space-around;
-      li {
-        margin-left: 1rem;
-       margin-right: 1rem;
-        list-style: none;
-        @include breakpoint-down('medium'){
-            margin-left: .4rem;
-            margin-right: .4rem;
-        }
-        a {
-          color: $silverChalice;
-          &:hover {
-            color: $silverChalice2;
-          }
-        }
-        &:nth-child(4) {
-          a {
-            color: $russet;
-            &:hover{
-                color: $russet2;
-            }
-          }
-        }
-      }
-    }
-  }
+nav{
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
