--- a/style/style.scss
+++ b/style/style.scss
@@ -3,7 +3,7 @@
 @import "global";
 @import "nav";
 @import "hero";
-@import "services";
-@import "testimonial";
 @import "aboutme";
 @import "footer";
+@import 'portfolio';
+@import 'digital';
